01-terraform/modules/sg/main.tf
# Security Group
resource "aws_security_group" "ec2_sg" {
  vpc_id = var.vpc_id
  name   = "${var.prefix}-ec2-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow SSH to all IPv4 addresses"
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTPS to all IPv4 addresses"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all traffic to all IPv4 addresses"
  }
}
